<resources>
    <string name="app_name">CEC FMAT</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_computer_center">ComputerCenterActivity</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este correo electrónico es invalido</string>
    <string name="error_invalid_password">Esta contraseña es corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_computer_center_detail">ComputerCenterDetailActivity</string>
    <string name="title_activity_computer_detail">ComputerDetailActivity</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text_id_computer">ID:</string>
    <string name="text_id_computer_example">M9</string>
    <string name="text_id_center">ID CENTRO:</string>
    <string name="text_id_center_example">CC9</string>
    <string name="text_MACADDRESS">MACADDRESS:</string>
    <string name="text_MACADDRESS_example">FF:FF:FF:FF:FF:FF</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_example">Example action</string>
    <string name="navigation_item_profile">Perfil</string>
    <string name="navigation_item_history">Historial</string>
    <string name="name_user">Nombre de usuario</string>
</resources>
